--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
-  "name": "nextjs-template",
+  "name": "nextjs_scalable_template",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=14.0.0",
+    "yarn": ">=1.22.19",
+    "npm": "please-use-yarn"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
