--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "start": "next start",
     "lint": "next lint",
     "prettier": "prettier --write .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@types/node": "20.2.1",
@@ -29,8 +31,21 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.3",
     "@commitlint/config-conventional": "^17.6.3",
+    "@storybook/addon-essentials": "7.0.18",
+    "@storybook/addon-interactions": "7.0.18",
+    "@storybook/addon-links": "7.0.18",
+    "@storybook/blocks": "7.0.18",
+    "@storybook/nextjs": "7.0.18",
+    "@storybook/react": "7.0.18",
+    "@storybook/testing-library": "0.0.14-next.2",
+    "@types/babel__core": "^7.20.1",
     "cross-env": "^7.0.3",
+    "eslint-plugin-storybook": "^0.6.12",
     "husky": "^8.0.3",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "storybook": "7.0.18"
+  },
+  "resolutions": {
+    "webpack": "^5"
   }
 }
