--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,5 @@
     "source.fixAll": true,
     "source.organizeImports": true
   },
-  "cSpell.words": ["autodocs", "nextjs"]
+  "cSpell.words": ["autodocs", "commitlint", "nextjs"]
 }
